# kokoro-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/homebrew/: kokoro-cli.rb
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_tts.py
src/kokoro_cli/: __init__.py  __main__.py  audio.py  chunker.py  cli.py  client.py  config.py  engine.py  server.py
tests/: conftest.py  test_audio.py  test_chunker.py  test_cli.py  test_client.py  test_config.py  test_engine.py  test_server.py
