[project]
name = "kokoro-cli"
version = "0.1.0"
description = "Fast local text-to-speech CLI using Kokoro-82M on Apple Silicon via MLX"
readme = "README.md"
authors = [
    { name = "lucataco", email = "lcatacora@cloudflare.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "mlx-audio>=0.4.0",
    "misaki[en]>=0.9.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "sounddevice>=0.5.0",
    "soundfile>=0.13.0",
    "click>=8.1.0",
    "numpy>=1.26.0",
]

[project.scripts]
kokoro = "kokoro_cli.cli:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
